# mediasoup-cpp

./: .gitignore  .gitmodules  .nightly-full-regression.env.example  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md  README_en.md  config.example.json  config.json  perf_sfu.data  review.md  setup.sh
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  source-build.instructions.md  tests.instructions.md
.github/prompts/: explain-runtime-flow.prompt.md  plan-structured-change.prompt.md  review-whole-system.prompt.md  write-regression-test.prompt.md
.github/workflows/: ci.yml
.kiro/settings/: lsp.json
changes/: README.md
changes/2026-04-17-integration-test-harness-refactor/: design.md  implementation.md  requirements.md  tasks.md
changes/2026-04-17-isolate-redis-backed-tests/: bugfix.md  design.md  tasks.md
changes/2026-04-17-keep-going-test-runners/: design.md  requirements.md  tasks.md
changes/2026-04-17-project-wide-cmake-refactor/: design.md  requirements.md  tasks.md
changes/2026-04-17-run-all-report/: design.md  requirements.md  tasks.md
changes/2026-04-18-full-cpp-test-entrypoint/: design.md  requirements.md  tasks.md
changes/2026-04-18-markdown-refresh/: design.md  requirements.md  tasks.md
changes/2026-04-18-plain-client-review-fixes/: bugfix.md  design.md  tasks.md
changes/2026-04-18-qos-harness-helper-dedup/: design.md  implementation.md  requirements.md  tasks.md
changes/2026-04-18-repo-review-round2-fixes/: bugfix.md  design.md  tasks.md
changes/2026-04-18-src-architecture-refactor/: design.md  implementation.md  requirements.md  tasks.md
changes/2026-04-19-nightly-full-regression-email/: design.md  requirements.md  tasks.md
changes/2026-04-19-qos-full-regression-followup-fixes/: bugfix.md  design.md  tasks.md
client/: CMakeLists.txt  DelayBasedBwe.h  NetworkThread.h  PlainClientApp.cpp  PlainClientApp.h  PlainClientLegacy.cpp  PlainClientSupport.cpp  PlainClientSupport.h  PlainClientThreaded.cpp  RtcpHandler.h  SenderPressureTracker.h  SenderTransportController.h  SourceWorker.h  ThreadTypes.h  ThreadedControlHelpers.h  ThreadedQosRuntime.cpp  ThreadedQosRuntime.h  TransportCcHelpers.h  UdpSendHelpers.h  WsClient.cpp  WsClient.h  main.cpp  run_sweep_test.sh
client/ccutils/: ProbeRegulator.h  ProbeSignal.h  ProbeTypes.h  Prober.h  TrendDetector.h
client/qos/: QosConstants.h  QosController.h  QosCoordinator.h  QosExecutor.h  QosPlanner.h  QosProbe.h  QosProfiles.h  QosProtocol.h  QosSignals.h  QosStateMachine.h  QosTypes.h  SenderPressureState.h
client/sendsidebwe/: CongestionDetector.h  PacketGroup.h  PacketInfo.h  PacketTracker.h  ProbeObserver.h  ProbePacketGroup.h  SendSideBwe.h  TrafficStats.h  TwccFeedbackTracker.h
client/test-results/: summary.csv
cmake/: CommonFfmpegAdapters.cmake  CommonMediaHelpers.cmake  MediasoupTargetHelpers.cmake  ResolveFFmpeg.cmake
common/ffmpeg/: AvError.cpp  (+13 more)
docs/: .codex  CODE_REVIEW_2026-04-08.md  DEVELOPMENT.md  DEVELOPMENT_2026-04-08.md  GETTING_STARTED.md  IMPLEMENTATION_10_TASKS.md  MONITORING_RUNBOOK.md  PRODUCTION_CHECKLIST.md  README.md  REDIS_KEY_GUIDELINES.md  ROADMAP.md  architecture_cn.md  commercialization-plan_cn.md  dependencies_cn.md  downlink-qos-case-results.md  downlink-qos-design.md  downlink-qos-design_cn.md  downlink-qos-implementation-plan_cn.md  downlink-qos-status.md  downlink-qos-test-results-summary.md  downlink-qos-v2-design_cn.md  downlink-qos-v2-implementation-plan_cn.md  downlink-qos-v3-design_cn.md  downlink-qos-v3-implementation-plan_cn.md  downlink-qos-v3-worker-validation_cn.md  downlink-qos-worker-validation_cn.md  fix-subscriber-busyloop.md  full-architecture-flow_cn.md  full-cpp-test-results.md  full-regression-test-results.md  linux-client-architecture_cn.md  linux-client-multi-source-thread-model_cn.md  linux-client-threaded-implementation-checklist_cn.md  linux-client-threaded-test-gap-checklist_cn.md  livekit-vs-mediasoup-qos.md  mediasoup-worker-architecture-analysis_cn.md  nightly-full-regression.md  non-qos-test-results.md  non-security-review-summary_cn.md  plain-client-qos-case-results.md  (+32 more)
fbs/: rtpStream.fbs
public/: index.html  mediasoup-client.bundle.js  mediasoup-client.qos.bundle.js  playback.html  qos-demo.js
scripts/: install_nightly_full_regression_cron.sh  nightly_full_regression.py  run_all_tests.sh  run_qos_tests.sh
src/: Channel.cpp  Channel.h  ChannelUtils.h  Constants.h  Consumer.cpp  Consumer.h  EventEmitter.h  GeoDbResolver.cpp  GeoDbResolver.h  GeoRouter.h  IntervalFileSink.h  Logger.h  MainBootstrap.cpp  MainBootstrap.h  Peer.h  PipeTransport.cpp  PipeTransport.h  PlainTransport.h  Producer.cpp  Producer.h  Recorder.cpp  Recorder.h  RoomCleanupHelpers.h  RoomDownlinkHelpers.h  RoomManager.h  RoomMediaHelpers.h  RoomRecordingHelpers.cpp  RoomRecordingHelpers.h  RoomRegistry.cpp  RoomRegistry.h  RoomRegistryConnection.cpp  RoomRegistryPubSub.cpp  RoomRegistryReplyUtils.h  RoomRegistrySelection.h  RoomRegistrySync.cpp  RoomService.cpp  RoomService.h  RoomServiceDownlink.cpp  RoomServiceLifecycle.cpp  RoomServiceMedia.cpp  (+35 more)
tests/: TestProcessUtils.h  TestRedisServer.h  TestWsClient.h  TransportCcTestHelpers.h  bench_worker_load.cpp  test_client_qos.cpp  test_common_ffmpeg.cpp  test_common_media.cpp  test_coverage_edge_cases.cpp  test_downlink_allocator.cpp  test_downlink_health.cpp  test_downlink_qos_registry.cpp  test_downlink_v2.cpp  test_e2e_pubsub.cpp  test_event_emitter.cpp  test_geo_db_resolver.cpp  test_geo_router.cpp  test_integration.cpp  test_interval_file_sink.cpp  test_multi_sfu_topology.cpp  test_multinode.cpp  test_multinode_integration.cpp  test_ortc.cpp  test_qos_accuracy.cpp  test_qos_aggregator.cpp  test_qos_integration.cpp  test_qos_override.cpp  test_qos_protocol.cpp  test_qos_recording_accuracy.cpp  test_qos_registry.cpp  test_qos_room_aggregator.cpp  test_qos_snapshot.cpp  test_qos_unit.cpp  test_qos_validator.cpp  test_request_timeout.cpp  test_review_fixes.cpp  test_review_fixes_integration.cpp  test_room.cpp  test_rtp_types.cpp  test_stability.cpp  (+8 more)
(+587 files in other folders)
